include_directories("${PROJECT_SOURCE_DIR}/src/")
include_directories("${CMAKE_CURRENT_BINARY_DIR}/src/")

enable_testing()
add_executable(black_surface black_surface.cxx)
add_test(black_surface black_surface)
add_executable(reflecting_surface reflecting_surface.cxx)
add_executable(periodic_boundary periodic_boundary.cxx)
add_test(periodic_boundary periodic_boundary)
configure_file(plot_results_reflecting.py plot_results_reflecting.py COPYONLY)

find_package(NetCDF)
if (NetCDF_FOUND)
  add_test(reflecting_surface reflecting_surface)
  target_link_libraries(reflecting_surface "netcdf" "curl")
  target_include_directories(reflecting_surface PUBLIC ${NetCDF_INCLUDE_DIRS})
endif(NetCDF_FOUND)
